syntax = "proto3";

package cn.gasin.dfs.rpc.namenode;

option java_multiple_files = true;
option java_package = "cn.gasin.dfs.rpc.namenode.service";
option java_outer_classname = "NameNodeServer";

// cluster maintain api
service ClusterMaintainAPI {
    // Register api
    rpc register (RegisterRequest) returns (RegisterResponse) {}
    // heartbeat api
    rpc heartbeat (HeartbeatRequest) returns (HeartbeatResponse) {}
}

message RegisterRequest {
    string ip  = 1;
    int32 port = 2;
    string hostname  = 3;
}
message HeartbeatRequest {
    string ip  = 1;
    int32 port = 2;
    string hostname  = 3;
}
message RegisterResponse{
    int32 status  = 1;
}
message HeartbeatResponse{
    int32 status  = 1;
}
